--- a/back-end/package.json
+++ b/back-end/package.json
@@ -17,7 +17,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "startup": "nodemon src/index.js"
   },
   "author": "",
   "license": "ISC"
