--- a/back-end/package.json
+++ b/back-end/package.json
@@ -7,12 +7,14 @@
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.9.5",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0"
   },
   "devDependencies": {},
