--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,12 +10,15 @@
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.0.0",
+    "helmet": "^3.22.0",
     "mongoose": "^5.9.5",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {},
   "scripts": {
