--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.4",
     "material-design-icons-iconfont": "^5.0.1",
     "vue": "^2.6.11",
+    "vue-cookies": "^1.7.0",
     "vue-router": "^3.1.6",
     "vuetify": "^2.2.11"
   },
