--- a/back-end/package.json
+++ b/back-end/package.json
@@ -9,12 +9,15 @@
     "body-parser": "^1.19.0",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.0.0",
     "helmet": "^3.22.0",
     "mongoose": "^5.9.5",
     "morgan": "^1.9.1",
-    "nodemon": "^2.0.2",
+    "node-cron": "^2.0.3",
+    "nodemailer": "^6.4.15",
+    "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
