--- a/front-end-vue/package.json
+++ b/front-end-vue/package.json
@@ -13,6 +13,7 @@
     "material-design-icons-iconfont": "^5.0.1",
     "vue": "^2.6.11",
     "vue-cookies": "^1.7.0",
+    "vue-particles": "^1.0.9",
     "vue-router": "^3.1.6",
     "vuetify": "^2.2.11"
   },
