--- a/front-end-vue/package.json
+++ b/front-end-vue/package.json
@@ -15,6 +15,7 @@
     "vue-cookies": "^1.7.0",
     "vue-particles": "^1.0.9",
     "vue-router": "^3.1.6",
+    "vuedraggable": "^2.24.3",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
