--- a/front-end-vue/package.json
+++ b/front-end-vue/package.json
@@ -16,7 +16,8 @@
     "vue-particles": "^1.0.9",
     "vue-router": "^3.1.6",
     "vuedraggable": "^2.24.3",
-    "vuetify": "^2.2.11"
+    "vuetify": "^2.2.11",
+    "vuetify-audio": "^0.3.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
