--- a/back-end/package.json
+++ b/back-end/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.23.0",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -15,6 +16,8 @@
     "helmet": "^3.22.0",
     "mongoose": "^5.9.5",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "node-cron": "^2.0.3",
     "nodemailer": "^6.4.15",
     "nodemon": "^2.0.6",
