--- a/front-end-vue/package.json
+++ b/front-end-vue/package.json
@@ -5,12 +5,17 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "postinstall": "if test \"$NODE_ENV\" = \"production\" ; then npm run build ; fi ",
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "express": "^4.17.1",
     "material-design-icons-iconfont": "^5.0.1",
+    "path": "^0.12.7",
+    "serve-static": "^1.14.1",
     "vue": "^2.6.11",
     "vue-cookies": "^1.7.0",
     "vue-particles": "^1.0.9",
