--- a/back-end/package.json
+++ b/back-end/package.json
@@ -23,6 +23,7 @@
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "xss-clean": "^0.1.1"
