--- a/back-end/package.json
+++ b/back-end/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.0.0",
+    "fs": "0.0.1-security",
     "helmet": "^3.22.0",
     "mongoose": "^5.9.5",
     "morgan": "^1.9.1",
