--- a/front-end-vue/package.json
+++ b/front-end-vue/package.json
@@ -18,6 +18,7 @@
     "serve-static": "^1.14.1",
     "vue": "^2.6.11",
     "vue-cookies": "^1.7.0",
+    "vue-jwt-decode": "^0.1.0",
     "vue-particles": "^1.0.9",
     "vue-router": "^3.1.6",
     "vuedraggable": "^2.24.3",
