--- a/front-end-vue/package.json
+++ b/front-end-vue/package.json
@@ -22,6 +22,7 @@
     "vue-particles": "^1.0.9",
     "vue-router": "^3.1.6",
     "vuedraggable": "^2.24.3",
+    "vuejs-countdown-timer": "^2.1.3",
     "vuetify": "^2.2.11",
     "vuetify-audio": "^0.3.3"
   },
