--- a/back-end/package.json
+++ b/back-end/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.0.0",
+    "fs": "0.0.1-security",
     "helmet": "^3.22.0",
     "mongoose": "^5.9.5",
     "morgan": "^1.9.1",
@@ -23,6 +24,7 @@
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "xss-clean": "^0.1.1"
