--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,6 +10,7 @@
     "cloudinary": "^1.23.0",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
+    "csv-writer": "^1.6.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.0.0",
